fix memory input bug

--- a/lab06/lab06.report/lab06.tex
+++ b/lab06/lab06.report/lab06.tex
@@ -153,6 +153,14 @@ MEM 冒险：
             1 : 0;
 \end{verbatim}
 
+\subsection{预测不发生机制}
+
+\includegraphics[width=\textwidth]{predict-not-taken.pdf}
+
+将 branch 判定提前到 ID 段。
+
+\includegraphics[width=\textwidth]{FINAL.pdf}
+
 \section{仿真结果}
 
 
