--- a/lab05/lab05.report/lab05.tex
+++ b/lab05/lab05.report/lab05.tex
@@ -10,8 +10,8 @@
 \usepackage{booktabs}
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.17}
+% \usepackage{pgfplots}
+% \pgfplotsset{compat=1.17}
 \usepackage{appendix}
 \captionsetup[lstlisting]{labelfont=bf,justification=justified}
 \usepackage{multicol}
@@ -21,7 +21,7 @@
 
 \graphicspath{{img/}}
 
-\usepackage[colorlinks,linkcolor=blue]{hyperref}
+\usepackage[colorlinks]{hyperref}
 \usepackage{bookmark}
 \providecommand{\code}[2]{\lstinputlisting[language=#2,caption=\href{run:#1}{\ttfamily #1}]{#1}}
 \providecommand{\img}[1]{\includegraphics[width=0.88\textwidth]{#1}}
@@ -78,35 +78,38 @@
 
 指令存储器通过读取 PC 的值获取需要读取的指令地址。如果读取的内存地址越界，就读取第一个指令。
 
-指令存储器被设定为 64 行。指令存储器的实现如下：
+\subsection{顶层模块设计（一）}
 
-\begin{lstlisting}[caption=InstMemory.v]
-module InstMemory(
-    input [31:0] readAddress,
-    output [31:0] inst
-    );
-
-    reg [31:0] instructions [0:63];
-    assign inst = instructions[readAddress / 4 < 64 ? readAddress / 4 : 0];
-
-endmodule
-\end{lstlisting}
-
-\subsection{顶层模块设计}
-
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{struct.pdf}
     \caption{顶层设计}
     \label{fig:top}
 \end{figure}
 
-图 \ref{fig:top} 展示了针对 9 条指令的顶层模块设计。而针对 16 条指令，需要对一些输入输出进行扩展。
+图 \ref{fig:top} 展示了针对 9 条指令的顶层模块设计。而针对 16 条指令，需要对一些原有的输入输出进行扩展。
 
-Ctr 模块会被扩展三个输出信号。
-\begin{table}[htbp]
+\begin{table}[H]
     \centering
-    \caption{Ctr 的扩展信号}
+    \caption{16条指令}
+    \begin{tabular}{>{\sffamily}c>{\sffamily}c>{\sffamily}c>{\sffamily}c}
+        \hline
+        add & sub & and & or \\
+        \bfseries addi & \bfseries andi & \bfseries ori & slt \\
+        lw & sw & \bfseries sll & \bfseries srl \\
+        beq & j &\bfseries jal &\bfseries jr \\ 
+        \hline
+    \end{tabular}
+\end{table}
+
+\clearpage
+
+\subsection{Ctr 扩展}
+
+Ctr 模块会被扩展三个输出信号，相关信息如表 \ref{tab:Ctr} 和图 \ref{fig:Ctr} 所示。
+\begin{table}[h]
+    \centering
+    \caption{Ctr 的扩展信号}\label{tab:Ctr}
     \begin{tabular}{>{\sffamily}cl>{\ttfamily}c>{\ttfamily}c}
         \toprule
         信号 & 描述 & 输出 & 输入\\
@@ -118,8 +121,15 @@ Ctr 模块会被扩展三个输出信号。
     \end{tabular}
 \end{table}
 
-扩展信号输出后就可以对于增添的指令进行识别，在实验 3 表 2 的基础上扩增：
-\begin{table}[htbp]
+\begin{figure}[h]
+    \centering
+    \input{img/CtrNew.tex}
+    \caption{扩展端口后的 Ctr}
+    \label{fig:Ctr}
+\end{figure}
+
+扩展信号输出后就可以支持 \textsf{addi}, \textsf{andi}, \textsf{ori}, \textsf{jal} ，在实验 3 表 2 的基础上扩增：
+\begin{table}[H]
     \centering
     \caption{增扩指令}
     \begin{tabular}{>{\sffamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c}
@@ -132,11 +142,13 @@ Ctr 模块会被扩展三个输出信号。
         \bottomrule
     \end{tabular}
 \end{table}
+\clearpage
+\subsection{ALUCtr 扩展}
 
-针对 ALUCtr 也会进行信号扩增。
-\begin{table}[htbp]
+针对 ALUCtr 也会进行信号扩增，如表 \ref{tab:aluctr} 和图 \ref{fig:aluctr} 所示。
+\begin{table}[h]
     \centering
-    \caption{ALUCtr 的扩展信号}
+    \caption{ALUCtr 的扩展信号}\label{tab:aluctr}
     \begin{tabular}{>{\sffamily}cl>{\ttfamily}c>{\ttfamily}c}
         \toprule
         信号 & 描述 & 输出 & 输入\\
@@ -148,10 +160,18 @@ Ctr 模块会被扩展三个输出信号。
     \end{tabular}
 \end{table}
 
-添加 \verb"nop" 信号是因为其指令与 \verb"sll" 冲突。
-\begin{table}[htbp]
+\begin{figure}[h]
     \centering
-    \caption{增广指令}
+    \input{img/ALUCtrNew.tex}
+    \caption{扩展端口后的 ALUCtr}
+    \label{fig:aluctr}
+\end{figure}
+
+添加 \verb"nop" 信号是因为其指令与 \verb"sll" 冲突，如表 \ref{tab:inst} 所示。
+
+\begin{table}[H]
+    \centering
+    \caption{增广指令}\label{tab:inst}
     \begin{tabular}{>{\sffamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c>{\ttfamily}c|>{\ttfamily}c}
         \toprule
         指令 & op & rs & rt & rd & shamt & funct & ALUCtrOut \\
@@ -163,6 +183,33 @@ Ctr 模块会被扩展三个输出信号。
         \bottomrule
     \end{tabular}
 \end{table}
+
+\subsection{跳转与PC}
+
+本处理器为统一起见，将时钟上跳沿设定为取指和递增，下跳沿将会处理跳转与分支相关的指令。示意图如图 \ref{fig:jal} 所示。
+
+\begin{figure}[H]
+    \centering
+    \input{img/jal.tex}
+    \caption{跳转与 PC}
+    \label{fig:jal}
+\end{figure}
+
+% 上跳沿相关的指令：
+\begin{lstlisting}
+    always @(posedge clk) begin
+        if(reset) PC <= 0; else  PC <= PC + 4; end
+    InstMemory instMemory(.readAddress(PC), .inst(INST));
+\end{lstlisting}
+
+% 下跳沿相关的指令：
+\begin{lstlisting}
+    always @(negedge clk) begin
+        PC <= JR ? ALU_RES : (JUMP ? (PC[31:28] + INST[25:0] << 2) : 
+                    ((BRANCH & ZERO) ? (PC + (OPRAND << 2)) : PC)); end
+\end{lstlisting}
+
+\subsection{顶层模块设计（二）}
 
 添加这些数据线后，就可以支持 16 条指令了。并注意对 JAL 进行特殊的处理。
 
@@ -281,6 +328,23 @@ Ctr 模块会被扩展三个输出信号。
 endmodule
 \end{lstlisting}
 
+\section{代码实现}
+
+\subsection{指令存储器}
+
+指令存储器被设定为 64 行。指令存储器的实现如下：
+
+\begin{lstlisting}[caption=InstMemory.v]
+module InstMemory(
+    input [31:0] readAddress,
+    output [31:0] inst
+    );
+
+    reg [31:0] instructions [0:63];
+    assign inst = instructions[readAddress / 4 < 64 ? readAddress / 4 : 0];
+
+endmodule
+\end{lstlisting}
 
 \section{仿真结果}
 
