--- a/lab05/lab05.report/lab05.tex
+++ b/lab05/lab05.report/lab05.tex
@@ -99,7 +99,7 @@ endmodule
     \label{fig:top}
 \end{figure}
 
-图 \ref{fig:top} 展示了针对 9 条指令的顶层模块设计。而针对 16 条指令，需要对一些原有的输入输出进行扩展。
+单周期 MIPS 处理器共分为五个阶段：指令获取（IF）、指令译码（ID）、执行（EX）、存储（MEM）、写回（WB）。图 \ref{fig:top} 展示了针对 9 条指令的顶层模块设计。而针对 16 条指令，需要对一些原有的输入输出进行扩展。
 
 \begin{table}[H]
     \centering
@@ -330,7 +330,9 @@ endmodule
 
 \section{实验心得}
 
-本次实验调试时间较长，花费近 8 个小时。主要是顶层设计的连线方案比较复杂，对于增扩的指令，需要重新设计端口加以实现。查看波形进行逐个波形的调试，有助于排查故障。这里面对于 ALUCtr 使用了 nop 扩增非常关键，否则会导致空指令执行了某些移位操作导致 0 寄存器非零，从而影响下面数据的读取。对于 PC 的写入顺序进行了比较多的调试，最后确定了上跳沿递增、下跳沿跳转的方案，可以互不干扰。
+本次实验调试时间较长，花费近 8 个小时。
+
+主要是顶层设计的连线方案比较复杂，对于增扩的指令，需要重新设计端口加以实现。查看波形进行逐个波形的调试，有助于排查故障。这里面对于 ALUCtr 使用了 nop 扩增非常关键，否则会导致空指令执行了某些移位操作导致 0 寄存器非零，从而影响下面数据的读取。对于 PC 的写入顺序进行了比较多的调试，最后确定了上跳沿递增、下跳沿跳转的方案，可以互不干扰。并且选路器没有采用模块化设计，而是使用三目运算符，让代码更加简洁易懂。
 
 本次实验增加了我对单周期处理器设计的理解，对于理解一些原理有很大的帮助，对于下面的流水线处理器设计也会起到关键的作用。
 
