--- a/lab03/lab03.report/lab03.tex
+++ b/lab03/lab03.report/lab03.tex
@@ -51,7 +51,7 @@
 
 \begin{document}
 \title{\normalsize \underline{计算机系统结构实验}\\\LARGE 实验 3 报告\\\vspace*{1em}\normalsize 简单的类 MIPS 单周期处理器\\部件实现--控制器，ALU}
-\author{李子龙\\ 518070910095}
+\author{Log Creative}
 \date{\today}
 \maketitle
 \tableofcontents
