--- a/lab05/lab05.report/lab05.tex
+++ b/lab05/lab05.report/lab05.tex
@@ -52,7 +52,7 @@
 
 \begin{document}
 \title{\normalsize \underline{计算机系统结构实验}\\\LARGE 实验 5 报告\\\vspace*{1em}\normalsize 类MIPS单周期处理器的设计与实现}
-\author{李子龙\\ 518070910095}
+\author{Log Creative}
 \date{\today}
 \maketitle
 \tableofcontents
