--- a/lab06/lab06.report/lab06.tex
+++ b/lab06/lab06.report/lab06.tex
@@ -53,7 +53,7 @@
 
 \begin{document}
 \title{\normalsize \underline{计算机系统结构实验}\\\LARGE 实验 6 报告\\\vspace*{1em}\normalsize 类MIPS多周期流水线处理器的设计与实现}
-\author{李子龙\\ 518070910095}
+\author{Log Creative}
 \date{\today}
 \maketitle
 \tableofcontents
